# product-information-retrieval

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  evaluate_batch.py  pyproject.toml
.github/workflows/: ci.yml
llm/: __init__.py  extractor.py  output_parser.py  prompts.py
product_retrieval/: __init__.py  api.py  config.py  context_builder.py  models.py  monitoring.py  pipeline.py  query_builder.py
product_retrieval/storage/: __init__.py  coordinator.py  postgres_store.py  qdrant_store.py  sqlite_store.py
product_retrieval/web_search/: __init__.py  base.py  factory.py  serpapi_client.py  tavily_client.py
tests/: test_api.py  test_extractor.py  test_output_parser.py  test_pipeline.py  test_prompts.py
