[project]
name = "product-information-retrieval"
version = "0.1.0"
description = "Product enrichment pipeline with web search, local LLM extraction, SQLite, and Qdrant."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1",
  "langchain-core>=0.3,<2",
  "langchain-openai>=1.1.14,<2",
  "pydantic>=2,<3",
  "psycopg2-binary>=2.9",
  "slowapi>=0.1.9",
  "uvicorn>=0.27,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["llm*", "product_retrieval*"]
